# RPA-Mainframe-Logistics-Automation

./: .gitignore  README.md  build_app.ps1  main.py  pyproject.toml  requirements.txt  verify_handler.py
output/: base_filiais.xlsx
src/: MainframeAutomation.py  calculo_cubagem.py  gerar_resumo.py  logar.py  main.py  processamento_pesado.py  rota_pesado_coleta.py  tela_carga_entrega.py  utils_captura_tela.py
src/rotinas/: Rotina_A.py  Rotina_B.py
src/utils/: resource_handler.py
