[project]
name = "dist-prep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "ctkmessagebox>=2.7",
    "customtkinter>=5.2.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyside6>=6.10.2",
    "pywin32>=311",
]
